test/code/test_class_var_error.out

Parse error: parse error, expecting `"function (T_FUNCTION)"' in {{CWD}}/test/code/test_class_var_error.php on line 4
