test/code/test_class_var_error.php
<?php

class A {
    $a = 15;
}
